Changes since version 3.0.0
---------------------------

- Fixed a bug in IceGrid, in which on Windows environment variables
  set in server descriptors would not override those already set in
  the nodes environment.

- Fixed a bug in slice2freeze in which using the --output-dir
  option was causing include paths to be modified in generated
  files.

- Fixed a bug where the IceGrid node, if installed as a Windows
  service, wouldn't correctly start on boot.

- Fixed a bug where the IceGrid node could incorrectly remove
  configuration files or database environment directories if they were
  not specified in alphabetical order (sorted by name) in the
  descriptor.

- Added --enable-new-dtags to Linux linker options.

- Added support for Apple Xcode 2.2.

- Windows x64 port; INSTALL.WINDOWS now shows how to target the
  x64 platform.

Changes since version 2.1.2
---------------------------

- Added support for custom comparison in Freeze Maps. You can now
  provide your own compare functors for keys and indices. See the
  slice2freeze usage for the new options. The default behavior is
  backward compatible, comparing binary strings in the Ice encoding.

  Map have 4 new functions:

    - lower_bound (const and non-const)
    - upper_bound (const and non-const)

  In addition, the implementation of equal_range is now correct. 

  Generated index classes have 6 new functions:

    - lowerBoundFor<name> (const and non-const)
    - upperBoundFor<name> (const and non-const)
    - equalRangeFor<name> (const and non-const)

  The findBy<name> also takes a new bool parameter, "onlyDups"; its
  default value is true for compatibility with previous releases.
  When onlyDups is true, findBy<name> returns only the elements that
  match the given index value; when false, the iterator returns first
  these elements and then lets you iterate over the remainder of the
  database (according to the order defined by the index).
